EXTRA_DIST = beanstalk.document beanstalk-climbing.section rarian-sk-cl.xml scrollkeeper_cl.xml

templatedir = $(datadir)/librarian
template_DATA = rarian-sk-cl.xml

# g-d-u uses this file (in a slightly different
# way - minus |s in codes to validate
# *sigh* we emulate
gdutemplatedir = $(datadir)/librarian/Templates/C
gdutemplate_DATA = scrollkeeper_cl.xml