EXTRA_DIST = help-spec-0.2.xml index.xhtml rar-mdf.xhtml rar-lib.xhtml rar-skcompat.xhtml rarian.document.in omf_equivalence.txt

manualdir = $(datadir)/librarian/manual

manual_DATA = help-spec-0.2.xml index.xhtml rar-mdf.xhtml rar-lib.xhtml rar-skcompat.xhtml

metadatadir = $(datadir)/help

metadata_DATA = rarian.document